--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -5,3 +5,7 @@
 html{
     scroll-behavior: smooth;
 }
+
+.button-effect{
+   @apply transition duration-300 outline-none focus-within:ring-1 hover:ring-1 hover:ring-gray-600/30 focus-within:ring-gray-600/30;
+}
